infra/manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
---
apiVersion: v1
kind: Namespace
metadata:
  name: elastic
---
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-system
