infra/manifests/external-nodeports.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-nodeport
  namespace: gitlab
spec:
  type: NodePort
  selector:
    app: webservice
    release: gitlab
    gitlab.com/webservice-name: default
  ports:
    - name: http
      port: 8081
      targetPort: 8181
      nodePort: 30081
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: kube-prometheus-stack
  ports:
    - name: http
      port: 8082
      targetPort: 3000
      nodePort: 30082
---
apiVersion: v1
kind: Service
metadata:
  name: rancher-nodeport
  namespace: cattle-system
spec:
  type: NodePort
  selector:
    app: rancher
    release: rancher
  ports:
    - name: http
      port: 8083
      targetPort: 80
      nodePort: 30083
